--- a/Resources/style.css
+++ b/Resources/style.css
@@ -83,7 +83,7 @@ body {
 	color:#666666;
 	line-height:1.7em;
 	font-weight:400;
-	background:#ffffff;
+	background:#000;
 	-webkit-font-smoothing: antialiased;
 	-moz-font-smoothing: antialiased;
 	font-family: 'Poppins', sans-serif;
