--- a/main.css
+++ b/main.css
@@ -1,27 +1,33 @@
-navbar-inverse {
-	width: 100%;
-	float: right;
-	margin: 0 0 1em 0;
-	padding: 0px;
-	background-color: #000;
-	border-bottom: 1px solid #000;
-	}
-nav ul {
-	list-style: none;
-	width: 800px;
-	margin: 0 auto;
-	padding: 20; }
-nav li {
-	float: left; }
-nav li a {
-	display: block;
-	padding: 20px 50px;
-	text-decoration: none;
-	font-weight: bold;
-	color: #debf12;
-	border-right: 1px solid #ccc; }
-nav li:first-child a {
-	border-left: 1px solid #ccc; }
-nav li a:hover {
-	color: #34bcaa;
-	background-color: #000; }
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add an active class to highlight the current page */
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+  display: none;
+}
