--- a/Charity/style.css
+++ b/Charity/style.css
@@ -1820,6 +1820,7 @@ img{
 
 .work-section.style-two.alternate{
 	padding-bottom: 130px;
+	background: #000;
 }
 
 .work-section.style-two.alternate .work-step{
