--- a/Charity/style.css
+++ b/Charity/style.css
@@ -80,10 +80,10 @@ font-family: 'Condiment', cursive;
 body {
 	
 	font-size:14px;
-	color:#666666;
+	color:#debf12;
 	line-height:1.7em;
 	font-weight:400;
-	background:#ffffff;
+	background:#000;
 	-webkit-font-smoothing: antialiased;
 	-moz-font-smoothing: antialiased;
 	font-family: 'Poppins', sans-serif;
