--- a/Charity/style.css
+++ b/Charity/style.css
@@ -80,7 +80,7 @@ font-family: 'Condiment', cursive;
 body {
 	
 	font-size:14px;
-	color:#debf12;
+	color:#000;
 	line-height:1.7em;
 	font-weight:400;
 	background:#000;
