--- a/HTH/style.css
+++ b/HTH/style.css
@@ -80,7 +80,7 @@ font-family: 'Condiment', cursive;
 body {
 	
 	font-size:14px;
-	color:#666666;
+	color:#debf12;
 	line-height:1.7em;
 	font-weight:400;
 	background:#ffffff;
