--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
+body  {
+  
+ color: #debf12;
+  
+}
+
+
+
+
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: #333;
